--- a/Decision_Tree_Turnover.ipynb
+++ b/Decision_Tree_Turnover.ipynb
@@ -4016,13 +4016,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Making predictions and calculating probabilities\n",
     "y_pred = model.predict(X_test)\n",
-    "y_prob = model.predict_proba(X_test)[:, 1]  # Probabilidade de y = 1"
+    "y_prob = model.predict_proba(X_test)[:, 1]  # Probability of y = 1"
    ]
   },
   {
